# flappy-rl

./: .cursorignore  .cursorrules  .gitignore  README.md  agent.py  env_setup.sh  flowchart.tex  generate_flowchart.py  main.ipynb  main.py  pyproject.toml  train.py
report/: flappy_bird_rl.tex  flowchart.tex  references.bib
