[project]
name = "flappy-bird"
version = "0.1.0"
description = "Flappy Bird Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flappy-bird-gymnasium>=0.4.0",
    "graphviz>=0.20.3",
    "gymnasium>=1.0.0",
    "ipykernel>=6.29.5",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "tinygrad>=0.10.0",
    "tqdm>=4.66.6",
]
